# Finance-Tracker

FinanceTracker/: CMakeLists.txt  TransactionData.h  TransactionStore.cpp  TransactionStore.h  addtransaction.cpp  addtransaction.h  detailtransaction.cpp  detailtransaction.h  icons.qrc  logindialog.cpp  logindialog.h  main.cpp  maintransaction.cpp  maintransaction.h  signupdialog.cpp  signupdialog.h  userdbmanger.cpp  userdbmanger.h
